--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "email": "raynos2@gmail.com"
   },
   "dependencies": {
-    "through-stream": "0.0.1",
+    "through-stream": "~0.0.2",
     "re-emitter": "~0.2.0",
-    "proxy-stream": "~0.1.0"
+    "proxy-stream": "~0.1.1"
   },
   "devDependencies": {
     "read-stream": "~0.2.0",
